5-Application of multi-cloud, multi-cluster service mesh/bookinfo-apps/Cluster1 - ck8s-prod-onprem/review-istio-apps-dst_rule_v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews.istio-apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
