5-Application of multi-cloud, multi-cluster service mesh/bookinfo-apps/Cluster1 - ck8s-prod-onprem/review-istio-apps-se.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: reviews-istio-apps
spec:
  hosts:
  # must be of form name.namespace.global
  - reviews.istio-apps.global
  # Treat remote cluster services as part of the service mesh
  # as all clusters in the service mesh share the same root of trust.
  location: MESH_INTERNAL
  ports:
  - name: http1
    number: 9080
    protocol: http
  resolution: DNS 
  addresses:
  # the IP address to which reviews.default.global will resolve to
  # must be unique for each remote service, within a given cluster.
  # This address need not be routable. Traffic for this IP will be captured
  # by the sidecar and routed appropriately.
  - 240.0.0.10
  endpoints:
  # This is the routable address of the ingress gateway in cluster2 that
  # sits in front of productpage service. Traffic from the sidecar will be
  # routed to this address.
  - address: 10.4.0.72
    ports:
      http1: 15443
    labels:
      cluster: k8s-DMZ-onprem
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-global
spec:
  host: reviews.istio-apps.global
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v2
    labels:
      cluster: k8s-DMZ-onprem
  - name: v3
    labels:
      cluster: k8s-DMZ-onprem
